why even worker just init

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Clean nginx.conf - Start after Redis is healthy, simple admin creation
+# Minimal working nginx.conf - Manual admin creation
 user nobody;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -13,8 +13,11 @@ http {
     include /usr/local/openresty/nginx/conf/mime.types;
     default_type application/octet-stream;
 
-    # Store admin credentials in shared memory
+    # Create admin user directly in init_by_lua_block
     init_by_lua_block {
+        local redis = require "resty.redis"
+        local cjson = require "cjson"
+        
         local admin_username = os.getenv("ADMIN_USERNAME") or "admin1"
         local admin_password = os.getenv("ADMIN_PASSWORD") or "admin1"
         local admin_user_id = os.getenv("ADMIN_USER_ID") or "admin"
@@ -24,42 +27,36 @@ http {
         ngx.shared.config:set("admin_user_id", admin_user_id)
         
         ngx.log(ngx.ERR, "INIT: Admin credentials loaded - " .. admin_username)
-    }
-
-    # Create admin user when first worker starts
-    init_worker_by_lua_block {
-        -- Only run on first worker
-        if ngx.worker.id() ~= 0 then
-            return
-        end
         
-        local redis = require "resty.redis"
-        local admin_username = ngx.shared.config:get("admin_username")
-        local admin_password = ngx.shared.config:get("admin_password")
-        local admin_user_id = ngx.shared.config:get("admin_user_id")
-        
-        ngx.log(ngx.ERR, "WORKER: Creating admin user if needed...")
-        
+        -- Connect to Redis and create admin user
         local red = redis:new()
         local ok, err = red:connect("devstral-redis", 6379)
         if not ok then
-            ngx.log(ngx.ERR, "WORKER: Redis connection failed: " .. (err or "unknown"))
+            ngx.log(ngx.ERR, "INIT: Failed to connect to Redis: " .. (err or "unknown"))
             return
         end
         
-        -- Check if admin exists
-        local exists = red:exists("user:" .. admin_username)
-        if exists == 1 then
-            ngx.log(ngx.ERR, "WORKER: Admin user already exists")
+        ngx.log(ngx.ERR, "INIT: Connected to Redis successfully")
+        
+        -- Check if admin user exists
+        local exists, err = red:exists("user:" .. admin_username)
+        if err then
+            ngx.log(ngx.ERR, "INIT: Error checking user existence: " .. err)
             red:close()
             return
         end
         
-        -- Create admin user
-        ngx.log(ngx.ERR, "WORKER: Creating admin user...")
-        local timestamp = os.date("!%Y-%m-%dT%H:%M:%SZ")
+        if exists == 1 then
+            ngx.log(ngx.ERR, "INIT: Admin user already exists - skipping creation")
+            red:close()
+            return
+        end
         
-        local result = red:hmset("user:" .. admin_username,
+        ngx.log(ngx.ERR, "INIT: Creating admin user...")
+        
+        -- Create admin user
+        local timestamp = os.date("!%Y-%m-%dT%H:%M:%SZ")
+        local result, err = red:hmset("user:" .. admin_username,
             "id", admin_user_id,
             "username", admin_username,
             "password_hash", admin_password,
@@ -69,9 +66,9 @@ http {
         )
         
         if result then
-            ngx.log(ngx.ERR, "WORKER: Admin user created successfully")
+            ngx.log(ngx.ERR, "INIT: ✅ Admin user created successfully!")
         else
-            ngx.log(ngx.ERR, "WORKER: Failed to create admin user")
+            ngx.log(ngx.ERR, "INIT: ❌ Failed to create admin user: " .. (err or "unknown"))
         end
         
         red:close()
@@ -102,6 +99,50 @@ http {
 
         root /usr/local/openresty/nginx/html;
         index index.html;
+
+        # Manual admin creation endpoint
+        location = /create-admin {
+            content_by_lua_block {
+                local redis = require "resty.redis"
+                local cjson = require "cjson"
+                
+                local admin_username = ngx.shared.config:get("admin_username")
+                local admin_password = ngx.shared.config:get("admin_password")
+                local admin_user_id = ngx.shared.config:get("admin_user_id")
+                
+                local red = redis:new()
+                local ok, err = red:connect("devstral-redis", 6379)
+                if not ok then
+                    ngx.say("Redis connection failed: " .. (err or "unknown"))
+                    return
+                end
+                
+                local exists = red:exists("user:" .. admin_username)
+                if exists == 1 then
+                    ngx.say("Admin user already exists!")
+                    red:close()
+                    return
+                end
+                
+                local timestamp = os.date("!%Y-%m-%dT%H:%M:%SZ")
+                local result = red:hmset("user:" .. admin_username,
+                    "id", admin_user_id,
+                    "username", admin_username,
+                    "password_hash", admin_password,
+                    "is_admin", "true",
+                    "is_approved", "true",
+                    "created_at", timestamp
+                )
+                
+                red:close()
+                
+                if result then
+                    ngx.say("Admin user created successfully!")
+                else
+                    ngx.say("Failed to create admin user")
+                end
+            }
+        }
 
         # Internal Redis operations
         location ~ ^/redis-internal/hgetall/(.+) {
