/login first visit creates admin... check is done every/login

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,11 +13,8 @@ http {
     include /usr/local/openresty/nginx/conf/mime.types;
     default_type application/octet-stream;
 
-    # Create admin user directly in init_by_lua_block
+    # Just store admin credentials in init_by_lua_block
     init_by_lua_block {
-        local redis = require "resty.redis"
-        local cjson = require "cjson"
-        
         local admin_username = os.getenv("ADMIN_USERNAME") or "admin1"
         local admin_password = os.getenv("ADMIN_PASSWORD") or "admin1"
         local admin_user_id = os.getenv("ADMIN_USER_ID") or "admin"
@@ -25,53 +22,9 @@ http {
         ngx.shared.config:set("admin_username", admin_username)
         ngx.shared.config:set("admin_password", admin_password)
         ngx.shared.config:set("admin_user_id", admin_user_id)
+        ngx.shared.config:set("admin_created", "false")  -- Track if admin is created
         
         ngx.log(ngx.ERR, "INIT: Admin credentials loaded - " .. admin_username)
-        
-        -- Connect to Redis and create admin user
-        local red = redis:new()
-        local ok, err = red:connect("devstral-redis", 6379)
-        if not ok then
-            ngx.log(ngx.ERR, "INIT: Failed to connect to Redis: " .. (err or "unknown"))
-            return
-        end
-        
-        ngx.log(ngx.ERR, "INIT: Connected to Redis successfully")
-        
-        -- Check if admin user exists
-        local exists, err = red:exists("user:" .. admin_username)
-        if err then
-            ngx.log(ngx.ERR, "INIT: Error checking user existence: " .. err)
-            red:close()
-            return
-        end
-        
-        if exists == 1 then
-            ngx.log(ngx.ERR, "INIT: Admin user already exists - skipping creation")
-            red:close()
-            return
-        end
-        
-        ngx.log(ngx.ERR, "INIT: Creating admin user...")
-        
-        -- Create admin user
-        local timestamp = os.date("!%Y-%m-%dT%H:%M:%SZ")
-        local result, err = red:hmset("user:" .. admin_username,
-            "id", admin_user_id,
-            "username", admin_username,
-            "password_hash", admin_password,
-            "is_admin", "true",
-            "is_approved", "true",
-            "created_at", timestamp
-        )
-        
-        if result then
-            ngx.log(ngx.ERR, "INIT: ✅ Admin user created successfully!")
-        else
-            ngx.log(ngx.ERR, "INIT: ❌ Failed to create admin user: " .. (err or "unknown"))
-        end
-        
-        red:close()
     }
 
     # Shared memory zones
@@ -100,49 +53,7 @@ http {
         root /usr/local/openresty/nginx/html;
         index index.html;
 
-        # Manual admin creation endpoint
-        location = /create-admin {
-            content_by_lua_block {
-                local redis = require "resty.redis"
-                local cjson = require "cjson"
-                
-                local admin_username = ngx.shared.config:get("admin_username")
-                local admin_password = ngx.shared.config:get("admin_password")
-                local admin_user_id = ngx.shared.config:get("admin_user_id")
-                
-                local red = redis:new()
-                local ok, err = red:connect("devstral-redis", 6379)
-                if not ok then
-                    ngx.say("Redis connection failed: " .. (err or "unknown"))
-                    return
-                end
-                
-                local exists = red:exists("user:" .. admin_username)
-                if exists == 1 then
-                    ngx.say("Admin user already exists!")
-                    red:close()
-                    return
-                end
-                
-                local timestamp = os.date("!%Y-%m-%dT%H:%M:%SZ")
-                local result = red:hmset("user:" .. admin_username,
-                    "id", admin_user_id,
-                    "username", admin_username,
-                    "password_hash", admin_password,
-                    "is_admin", "true",
-                    "is_approved", "true",
-                    "created_at", timestamp
-                )
-                
-                red:close()
-                
-                if result then
-                    ngx.say("Admin user created successfully!")
-                else
-                    ngx.say("Failed to create admin user")
-                end
-            }
-        }
+        # Removed /create-admin endpoint - using auto-creation instead
 
         # Internal Redis operations
         location ~ ^/redis-internal/hgetall/(.+) {
@@ -186,6 +97,48 @@ http {
         # ===== AUTH ENDPOINTS =====
         
         location = /api/auth/login {
+            access_by_lua_block {
+                -- Auto-create admin user on first login attempt
+                local admin_created = ngx.shared.config:get("admin_created")
+                if admin_created == "false" then
+                    local redis = require "resty.redis"
+                    local admin_username = ngx.shared.config:get("admin_username")
+                    local admin_password = ngx.shared.config:get("admin_password")
+                    local admin_user_id = ngx.shared.config:get("admin_user_id")
+                    
+                    ngx.log(ngx.ERR, "AUTO-CREATE: Checking if admin user needs to be created...")
+                    
+                    local red = redis:new()
+                    local ok, err = red:connect("devstral-redis", 6379)
+                    if ok then
+                        local exists = red:exists("user:" .. admin_username)
+                        if exists == 0 then
+                            ngx.log(ngx.ERR, "AUTO-CREATE: Creating admin user...")
+                            local timestamp = os.date("!%Y-%m-%dT%H:%M:%SZ")
+                            local result = red:hmset("user:" .. admin_username,
+                                "id", admin_user_id,
+                                "username", admin_username,
+                                "password_hash", admin_password,
+                                "is_admin", "true",
+                                "is_approved", "true",
+                                "created_at", timestamp
+                            )
+                            if result then
+                                ngx.log(ngx.ERR, "AUTO-CREATE: ✅ Admin user created successfully!")
+                                ngx.shared.config:set("admin_created", "true")
+                            else
+                                ngx.log(ngx.ERR, "AUTO-CREATE: ❌ Failed to create admin user")
+                            end
+                        else
+                            ngx.log(ngx.ERR, "AUTO-CREATE: Admin user already exists")
+                            ngx.shared.config:set("admin_created", "true")
+                        end
+                        red:close()
+                    else
+                        ngx.log(ngx.ERR, "AUTO-CREATE: Failed to connect to Redis: " .. (err or "unknown"))
+                    end
+                end
+            }
             content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
         }
 
