--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ http {
     include /usr/local/openresty/nginx/conf/mime.types;
     default_type application/octet-stream;
 
-    # Just store admin credentials in init_by_lua_block
+    # Create admin user directly in init_by_lua_block using raw socket
     init_by_lua_block {
         local admin_username = os.getenv("ADMIN_USERNAME") or "admin1"
         local admin_password = os.getenv("ADMIN_PASSWORD") or "admin1"
@@ -22,9 +22,97 @@ http {
         ngx.shared.config:set("admin_username", admin_username)
         ngx.shared.config:set("admin_password", admin_password)
         ngx.shared.config:set("admin_user_id", admin_user_id)
-        ngx.shared.config:set("admin_created", "false")  -- Track if admin is created
         
         ngx.log(ngx.ERR, "INIT: Admin credentials loaded - " .. admin_username)
+        
+        -- Use raw socket instead of resty.redis
+        local socket = require "resty.socket"
+        local tcp = socket.tcp
+        
+        local ok, err = pcall(function()
+            local sock = tcp()
+            if not sock then
+                ngx.log(ngx.ERR, "INIT: Failed to create socket")
+                return
+            end
+            
+            -- Connect directly to Redis container
+            local ok, err = sock:connect("devstral-redis", 6379)
+            if not ok then
+                ngx.log(ngx.ERR, "INIT: Socket connection failed: " .. (err or "unknown"))
+                sock:close()
+                return
+            end
+            
+            ngx.log(ngx.ERR, "INIT: Connected to Redis via raw socket")
+            
+            -- Check if user exists using raw Redis protocol
+            local exists_cmd = "EXISTS user:" .. admin_username .. "\r\n"
+            local bytes, err = sock:send(exists_cmd)
+            if not bytes then
+                ngx.log(ngx.ERR, "INIT: Failed to send EXISTS command: " .. (err or "unknown"))
+                sock:close()
+                return
+            end
+            
+            local data, err = sock:receive()
+            if not data then
+                ngx.log(ngx.ERR, "INIT: Failed to receive EXISTS response: " .. (err or "unknown"))
+                sock:close()
+                return
+            end
+            
+            ngx.log(ngx.ERR, "INIT: EXISTS response: " .. data)
+            
+            -- If user exists (response is ":1"), skip creation
+            if data:match(":1") then
+                ngx.log(ngx.ERR, "INIT: Admin user already exists - skipping")
+                sock:close()
+                return
+            end
+            
+            ngx.log(ngx.ERR, "INIT: Creating admin user...")
+            
+            -- Create user using raw Redis HMSET protocol
+            local timestamp = os.date("!%Y-%m-%dT%H:%M:%SZ")
+            local hmset_cmd = "HMSET user:" .. admin_username .. 
+                " id " .. admin_user_id ..
+                " username " .. admin_username ..
+                " password_hash " .. admin_password ..
+                " is_admin true" ..
+                " is_approved true" ..
+                " created_at " .. timestamp .. "\r\n"
+            
+            ngx.log(ngx.ERR, "INIT: Sending HMSET command")
+            
+            local bytes, err = sock:send(hmset_cmd)
+            if not bytes then
+                ngx.log(ngx.ERR, "INIT: Failed to send HMSET command: " .. (err or "unknown"))
+                sock:close()
+                return
+            end
+            
+            local response, err = sock:receive()
+            if not response then
+                ngx.log(ngx.ERR, "INIT: Failed to receive HMSET response: " .. (err or "unknown"))
+                sock:close()
+                return
+            end
+            
+            ngx.log(ngx.ERR, "INIT: HMSET response: " .. response)
+            
+            if response:match("OK") then
+                ngx.log(ngx.ERR, "INIT: ✅ Admin user created successfully via raw socket!")
+            else
+                ngx.log(ngx.ERR, "INIT: ❌ Unexpected HMSET response: " .. response)
+            end
+            
+            sock:close()
+        end)
+        
+        if not ok then
+            ngx.log(ngx.ERR, "INIT: Error during raw socket admin creation: " .. tostring(err))
+        end
     }
 
     # Shared memory zones
@@ -53,7 +141,7 @@ http {
         root /usr/local/openresty/nginx/html;
         index index.html;
 
-        # Removed /create-admin endpoint - using auto-creation instead
+        # Admin creation happens automatically on first login attempt
 
         # Internal Redis operations
         location ~ ^/redis-internal/hgetall/(.+) {
@@ -97,48 +185,6 @@ http {
         # ===== AUTH ENDPOINTS =====
         
         location = /api/auth/login {
-            access_by_lua_block {
-                -- Auto-create admin user on first login attempt
-                local admin_created = ngx.shared.config:get("admin_created")
-                if admin_created == "false" then
-                    local redis = require "resty.redis"
-                    local admin_username = ngx.shared.config:get("admin_username")
-                    local admin_password = ngx.shared.config:get("admin_password")
-                    local admin_user_id = ngx.shared.config:get("admin_user_id")
-                    
-                    ngx.log(ngx.ERR, "AUTO-CREATE: Checking if admin user needs to be created...")
-                    
-                    local red = redis:new()
-                    local ok, err = red:connect("devstral-redis", 6379)
-                    if ok then
-                        local exists = red:exists("user:" .. admin_username)
-                        if exists == 0 then
-                            ngx.log(ngx.ERR, "AUTO-CREATE: Creating admin user...")
-                            local timestamp = os.date("!%Y-%m-%dT%H:%M:%SZ")
-                            local result = red:hmset("user:" .. admin_username,
-                                "id", admin_user_id,
-                                "username", admin_username,
-                                "password_hash", admin_password,
-                                "is_admin", "true",
-                                "is_approved", "true",
-                                "created_at", timestamp
-                            )
-                            if result then
-                                ngx.log(ngx.ERR, "AUTO-CREATE: ✅ Admin user created successfully!")
-                                ngx.shared.config:set("admin_created", "true")
-                            else
-                                ngx.log(ngx.ERR, "AUTO-CREATE: ❌ Failed to create admin user")
-                            end
-                        else
-                            ngx.log(ngx.ERR, "AUTO-CREATE: Admin user already exists")
-                            ngx.shared.config:set("admin_created", "true")
-                        end
-                        red:close()
-                    else
-                        ngx.log(ngx.ERR, "AUTO-CREATE: Failed to connect to Redis: " .. (err or "unknown"))
-                    end
-                end
-            }
             content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
         }
 
