ngx.socket.tcp()

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,7 @@ http {
     include /usr/local/openresty/nginx/conf/mime.types;
     default_type application/octet-stream;
 
-    # Create admin user directly in init_by_lua_block using raw socket
+    # Create admin user directly in init_by_lua_block using ngx.socket.tcp
     init_by_lua_block {
         local admin_username = os.getenv("ADMIN_USERNAME") or "admin1"
         local admin_password = os.getenv("ADMIN_PASSWORD") or "admin1"
@@ -25,26 +25,26 @@ http {
         
         ngx.log(ngx.ERR, "INIT: Admin credentials loaded - " .. admin_username)
         
-        -- Use raw socket instead of resty.redis
-        local socket = require "resty.socket"
-        local tcp = socket.tcp
-        
+        -- Use ngx.socket.tcp() - available in init_by_lua_block
         local ok, err = pcall(function()
-            local sock = tcp()
+            local sock = ngx.socket.tcp()
             if not sock then
-                ngx.log(ngx.ERR, "INIT: Failed to create socket")
+                ngx.log(ngx.ERR, "INIT: Failed to create TCP socket")
                 return
             end
+            
+            -- Set timeouts
+            sock:settimeout(5000) -- 5 seconds
             
             -- Connect directly to Redis container
             local ok, err = sock:connect("devstral-redis", 6379)
             if not ok then
-                ngx.log(ngx.ERR, "INIT: Socket connection failed: " .. (err or "unknown"))
+                ngx.log(ngx.ERR, "INIT: TCP connection failed: " .. (err or "unknown"))
                 sock:close()
                 return
             end
             
-            ngx.log(ngx.ERR, "INIT: Connected to Redis via raw socket")
+            ngx.log(ngx.ERR, "INIT: Connected to Redis via TCP socket")
             
             -- Check if user exists using raw Redis protocol
             local exists_cmd = "EXISTS user:" .. admin_username .. "\r\n"
@@ -102,7 +102,7 @@ http {
             ngx.log(ngx.ERR, "INIT: HMSET response: " .. response)
             
             if response:match("OK") then
-                ngx.log(ngx.ERR, "INIT: ✅ Admin user created successfully via raw socket!")
+                ngx.log(ngx.ERR, "INIT: ✅ Admin user created successfully via TCP socket!")
             else
                 ngx.log(ngx.ERR, "INIT: ❌ Unexpected HMSET response: " .. response)
             end
@@ -111,7 +111,7 @@ http {
         end)
         
         if not ok then
-            ngx.log(ngx.ERR, "INIT: Error during raw socket admin creation: " .. tostring(err))
+            ngx.log(ngx.ERR, "INIT: Error during TCP socket admin creation: " .. tostring(err))
         end
     }
 
