# No initialization needed - admin created via Redis CLI

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Minimal working nginx.conf - Manual admin creation
+# Minimal working nginx.conf - No admin creation
 user nobody;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -13,110 +13,7 @@ http {
     include /usr/local/openresty/nginx/conf/mime.types;
     default_type application/octet-stream;
 
-    # Create admin user directly in init_by_lua_block using ngx.socket.tcp
-    init_by_lua_block {
-        local admin_username = os.getenv("ADMIN_USERNAME") or "admin1"
-        local admin_password = os.getenv("ADMIN_PASSWORD") or "admin1"
-        local admin_user_id = os.getenv("ADMIN_USER_ID") or "admin"
-        
-        ngx.shared.config:set("admin_username", admin_username)
-        ngx.shared.config:set("admin_password", admin_password)
-        ngx.shared.config:set("admin_user_id", admin_user_id)
-        
-        ngx.log(ngx.ERR, "INIT: Admin credentials loaded - " .. admin_username)
-        
-        -- Use ngx.socket.tcp() - available in init_by_lua_block
-        local ok, err = pcall(function()
-            local sock = ngx.socket.tcp()
-            if not sock then
-                ngx.log(ngx.ERR, "INIT: Failed to create TCP socket")
-                return
-            end
-            
-            -- Set timeouts
-            sock:settimeout(5000) -- 5 seconds
-            
-            -- Connect directly to Redis container
-            local ok, err = sock:connect("devstral-redis", 6379)
-            if not ok then
-                ngx.log(ngx.ERR, "INIT: TCP connection failed: " .. (err or "unknown"))
-                sock:close()
-                return
-            end
-            
-            ngx.log(ngx.ERR, "INIT: Connected to Redis via TCP socket")
-            
-            -- Check if user exists using raw Redis protocol
-            local exists_cmd = "EXISTS user:" .. admin_username .. "\r\n"
-            local bytes, err = sock:send(exists_cmd)
-            if not bytes then
-                ngx.log(ngx.ERR, "INIT: Failed to send EXISTS command: " .. (err or "unknown"))
-                sock:close()
-                return
-            end
-            
-            local data, err = sock:receive()
-            if not data then
-                ngx.log(ngx.ERR, "INIT: Failed to receive EXISTS response: " .. (err or "unknown"))
-                sock:close()
-                return
-            end
-            
-            ngx.log(ngx.ERR, "INIT: EXISTS response: " .. data)
-            
-            -- If user exists (response is ":1"), skip creation
-            if data:match(":1") then
-                ngx.log(ngx.ERR, "INIT: Admin user already exists - skipping")
-                sock:close()
-                return
-            end
-            
-            ngx.log(ngx.ERR, "INIT: Creating admin user...")
-            
-            -- Create user using raw Redis HMSET protocol
-            local timestamp = os.date("!%Y-%m-%dT%H:%M:%SZ")
-            local hmset_cmd = "HMSET user:" .. admin_username .. 
-                " id " .. admin_user_id ..
-                " username " .. admin_username ..
-                " password_hash " .. admin_password ..
-                " is_admin true" ..
-                " is_approved true" ..
-                " created_at " .. timestamp .. "\r\n"
-            
-            ngx.log(ngx.ERR, "INIT: Sending HMSET command")
-            
-            local bytes, err = sock:send(hmset_cmd)
-            if not bytes then
-                ngx.log(ngx.ERR, "INIT: Failed to send HMSET command: " .. (err or "unknown"))
-                sock:close()
-                return
-            end
-            
-            local response, err = sock:receive()
-            if not response then
-                ngx.log(ngx.ERR, "INIT: Failed to receive HMSET response: " .. (err or "unknown"))
-                sock:close()
-                return
-            end
-            
-            ngx.log(ngx.ERR, "INIT: HMSET response: " .. response)
-            
-            if response:match("OK") then
-                ngx.log(ngx.ERR, "INIT: ✅ Admin user created successfully via TCP socket!")
-            else
-                ngx.log(ngx.ERR, "INIT: ❌ Unexpected HMSET response: " .. response)
-            end
-            
-            sock:close()
-        end)
-        
-        if not ok then
-            ngx.log(ngx.ERR, "INIT: Error during TCP socket admin creation: " .. tostring(err))
-        end
-    }
-
-    # Shared memory zones
-    lua_shared_dict config 1m;
+    # No initialization needed - admin created via Redis CLI
 
     # Upstreams
     upstream redis_backend {
@@ -140,8 +37,6 @@ http {
 
         root /usr/local/openresty/nginx/html;
         index index.html;
-
-        # Admin creation happens automatically on first login attempt
 
         # Internal Redis operations
         location ~ ^/redis-internal/hgetall/(.+) {
