--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,12 +61,15 @@ services:
     networks:
       - devstral-network
 
-  # Redis - Direct access via redis2 module
   redis:
     build: ./redis
     container_name: devstral-redis
     ports:
-      - "6379:6379"  # Expose for debugging/monitoring
+      - "6379:6379"
+    environment:
+      - ADMIN_USERNAME=${ADMIN_USERNAME}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - ADMIN_USER_ID=${ADMIN_USER_ID}
     volumes:
       - ./volumes/redis_data:/data
       - ./volumes/redis_logs:/var/log/redis
@@ -87,6 +90,7 @@ services:
       timeout: 5s
       retries: 3
       start_period: 30s
+
   nginx:
     build: ./nginx
     container_name: devstral-nginx
@@ -94,15 +98,6 @@ services:
       - "80:80"
     environment:
       - ALLOWED_DOMAINS=${ALLOWED_DOMAINS}
-      - ADMIN_USERNAME=${ADMIN_USERNAME}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
-      - ADMIN_USER_ID=${ADMIN_USER_ID}
-      - MAX_PENDING_USERS=${MAX_PENDING_USERS}
-      # Add other environment variables as needed
-      - MIN_USERNAME_LENGTH=${MIN_USERNAME_LENGTH}
-      - MAX_USERNAME_LENGTH=${MAX_USERNAME_LENGTH}
-      - MIN_PASSWORD_LENGTH=${MIN_PASSWORD_LENGTH}
-      - MAX_PASSWORD_LENGTH=${MAX_PASSWORD_LENGTH}
     volumes:
       - ./volumes/nginx_cache:/var/cache/nginx
       - ./volumes/nginx_logs:/var/log/nginx
