--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,6 +43,7 @@ http {
             internal;
             redis2_query hgetall $1;
             redis2_pass redis_backend;
+            redis2_literal_raw_query on;
         }
 
         location ~ ^/redis-internal/exists/(.+) {
