--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -92,6 +92,31 @@ http {
             content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
         }
 
+        # ===== CHAT ENDPOINT =====
+        
+        location /api/chat {
+            proxy_pass http://ollama_backend/api/chat;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Streaming support
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_read_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_connect_timeout 30s;
+        }
+
+        # ===== ADMIN ENDPOINTS =====
+        
+        location ~ ^/api/admin/(.+) {
+            content_by_lua_file /usr/local/openresty/nginx/lua/admin.lua;
+        }
+
         location = /health {
             content_by_lua_block {
                 ngx.say('{"status": "healthy", "timestamp": "' .. ngx.utctime() .. '"}')
