--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# Minimal working nginx.conf - No admin creation
+# Minimal working nginx.conf - Fixed with DEL operation
 user nobody;
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
@@ -12,8 +12,6 @@ events {
 http {
     include /usr/local/openresty/nginx/conf/mime.types;
     default_type application/octet-stream;
-
-    # No initialization needed - admin created via Redis CLI
 
     # Upstreams
     upstream redis_backend {
@@ -52,6 +50,31 @@ http {
             redis2_pass redis_backend;
         }
 
+        location ~ ^/redis-internal/del/(.+) {
+            internal;
+            redis2_query del $1;
+            redis2_pass redis_backend;
+        }
+
+        location ~ ^/redis-internal/hset/(.+) {
+            internal;
+            set_by_lua_block $redis_cmd {
+                local key_and_args = ngx.var[1]
+                local parts = {}
+                for part in key_and_args:gmatch("[^/]+") do
+                    table.insert(parts, part)
+                end
+                
+                local cmd = "hset"
+                for i, part in ipairs(parts) do
+                    cmd = cmd .. " " .. part
+                end
+                return cmd
+            }
+            redis2_raw_query $redis_cmd;
+            redis2_pass redis_backend;
+        }
+
         location ~ ^/redis-internal/hmset/(.+) {
             internal;
             set_by_lua_block $redis_cmd {
@@ -68,13 +91,6 @@ http {
                 return cmd
             }
             redis2_raw_query $redis_cmd;
-            redis2_pass redis_backend;
-        }
-
-        # Generic redis2 fallback
-        location ~ ^/redis-internal/(.+) {
-            internal;
-            redis2_raw_query $1;
             redis2_pass redis_backend;
         }
 
