--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# .env file - Static Implementation Configuration
+# .env file - Hybrid GPU+CPU Configuration (7.5GB VRAM + CPU RAM)
 # =============================================================================
 # 🔧 CONFIGURE ME - CHANGE THESE SETTINGS BEFORE DEPLOYMENT
 # =============================================================================
@@ -16,41 +16,45 @@ OLLAMA_MODEL=devstral
 MODEL_DISPLAY_NAME=Devstral Small 2505
 MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model (23.57B parameters)
 
-# Performance Tuning - CONSERVATIVE for stability
-OLLAMA_GPU_LAYERS=12                      # GPU layers for model
-OLLAMA_CONTEXT_SIZE=512                   # Context window size
-OLLAMA_BATCH_SIZE=64                      # Batch processing size
-OLLAMA_NUM_THREAD=2                       # Number of threads
+# Performance Tuning - HYBRID GPU+CPU (7.5GB VRAM + System RAM)
+OLLAMA_GPU_LAYERS=8                       # ~7.5GB VRAM (adjust based on actual usage)
+OLLAMA_CONTEXT_SIZE=4096                  # Good context size for hybrid mode
+OLLAMA_BATCH_SIZE=512                     # Larger batch for CPU processing
+OLLAMA_NUM_THREAD=8                       # More CPU threads for CPU layers
 
 # User Management
 MAX_CHATS_PER_USER=1                      # Maximum chats per user
 MAX_PENDING_USERS=2                       # Maximum pending user registrations
-RATE_LIMIT_MESSAGES_PER_MINUTE=100        # Rate limit per user
+RATE_LIMIT_MESSAGES_PER_MINUTE=10         # Reasonable rate limit
 
-# Resource Limits
-OLLAMA_MEMORY=15G                         # RAM for Ollama
-OLLAMA_CPU=4                              # CPU cores for Ollama
+# Resource Limits - OPTIMIZED for Hybrid Processing
+OLLAMA_MEMORY=16G                         # Large RAM allocation for CPU layers
+OLLAMA_CPU=4                              # More CPU cores for hybrid processing
 REDIS_MEMORY=2G                           # RAM for Redis
 REDIS_CPU=1                               # CPU cores for Redis
 NGINX_MEMORY=1G                           # RAM for nginx
 NGINX_CPU=1                               # CPU cores for nginx
 
 # =============================================================================
-# ⚡ OLLAMA PERFORMANCE PARAMETERS
+# ⚡ OLLAMA PERFORMANCE PARAMETERS - HYBRID MODE
 # =============================================================================
 OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
-OLLAMA_KEEP_ALIVE=5m                      # Keep model loaded for 5 minutes
+OLLAMA_KEEP_ALIVE=15m                     # Longer keep alive for slower loading
 OLLAMA_MAX_LOADED_MODELS=1                # Only one model at a time
-OLLAMA_LOAD_TIMEOUT=10m                   # Model load timeout
+OLLAMA_LOAD_TIMEOUT=20m                   # Longer timeout for hybrid loading
 OLLAMA_NOPRUNE=1                          # Never unload models
 OLLAMA_MLOCK=1                            # Lock model in RAM/VRAM
-OLLAMA_MMAP=0                             # Disable memory mapping
+OLLAMA_MMAP=1                             # Enable memory mapping for CPU layers
 OLLAMA_NUMA=0                             # Disable NUMA
 OLLAMA_MAIN_GPU=0                         # Primary GPU ID
 
+# Hybrid-specific settings
+OLLAMA_CPU_TARGET=75                      # Target 75% CPU usage for non-GPU layers
+OLLAMA_GPU_MEMORY_FRACTION=0.31           # ~7.5GB of 24GB (31%)
+
 # =============================================================================
-# 🎛️ MODEL PARAMETERS
+# 🎛️ MODEL PARAMETERS - HYBRID OPTIMIZED
 # =============================================================================
 MODEL_TEMPERATURE=0.7
 MODEL_TOP_P=0.9
@@ -59,17 +63,17 @@ MODEL_REPEAT_PENALTY=1.1
 MODEL_MIROSTAT=0
 MODEL_MIROSTAT_ETA=0.1
 MODEL_MIROSTAT_TAU=5.0
-MODEL_USE_MMAP=false                      # Disable memory mapping
+MODEL_USE_MMAP=true                       # Enable for CPU layers
 MODEL_USE_MLOCK=true                      # Enable memory locking
 MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
 
 # =============================================================================
-# 📱 APPLICATION SETTINGS
+# 📱 APPLICATION SETTINGS - HYBRID OPTIMIZED
 # =============================================================================
-MODEL_MAX_TOKENS=32                       # Max tokens per response
-MODEL_TIMEOUT=60                          # Response timeout in seconds
-CHAT_HISTORY_LIMIT=5                      # Messages to keep in history
-CHAT_CACHE_TTL_SECONDS=1800               # Cache TTL (30 minutes)
+MODEL_MAX_TOKENS=2048                     # Reasonable max tokens
+MODEL_TIMEOUT=180                         # 3 minutes (hybrid is slower)
+CHAT_HISTORY_LIMIT=10                     # Keep good history
+CHAT_CACHE_TTL_SECONDS=3600               # 1 hour cache
 
 # =============================================================================
 # 👥 USER VALIDATION SETTINGS
@@ -89,10 +93,10 @@ RATE_LIMIT_WINDOW=60                      # Rate limit window in seconds
 USER_ID_COUNTER_START=1000                # Starting ID for regular users
 
 # =============================================================================
-# 🖥️ NVIDIA GPU SETTINGS
+# 🖥️ NVIDIA GPU SETTINGS - HYBRID MODE
 # =============================================================================
 NVIDIA_VISIBLE_DEVICES=0
-CUDA_MEMORY_FRACTION=0.80                 # Use 80% of GPU memory
+CUDA_MEMORY_FRACTION=0.31                 # 31% of 24GB = ~7.5GB
 LOG_LEVEL=INFO
 LOG_FORMAT=json
 
@@ -106,13 +110,13 @@ REDIS_RETRY_ON_TIMEOUT=true
 REDIS_DECODE_RESPONSES=true
 
 # =============================================================================
-# ⏱️ TIMEOUT SETTINGS
+# ⏱️ TIMEOUT SETTINGS - HYBRID MODE (LONGER)
 # =============================================================================
-UNLIMITED_TIMEOUT=300                     # 5 minutes for long operations
-STREAMING_TIMEOUT=300                     # 5 minutes for streaming
-AIOHTTP_TOTAL_TIMEOUT=300                 # Total HTTP timeout
-AIOHTTP_CONNECT_TIMEOUT=30                # Connection timeout
-AIOHTTP_READ_TIMEOUT=300                  # Read timeout
+UNLIMITED_TIMEOUT=900                     # 15 minutes for long operations
+STREAMING_TIMEOUT=900                     # 15 minutes for streaming
+AIOHTTP_TOTAL_TIMEOUT=900                 # Total HTTP timeout
+AIOHTTP_CONNECT_TIMEOUT=60                # Connection timeout
+AIOHTTP_READ_TIMEOUT=900                  # Read timeout
 
 # =============================================================================
 # 🌐 CLIENT-SIDE CONFIGURATION
