--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -1,83 +1,46 @@
-# Redis configuration file - Real-time chat optimized
-# Save this as redis/redis.conf
-
-# Network
+# redis/redis.conf - Fixed for better persistence
 bind 0.0.0.0
 protected-mode no
 port 6379
-tcp-backlog 511
 timeout 0
 tcp-keepalive 300
 
 # General
 daemonize no
-supervised no
 loglevel notice
 logfile ""
 databases 16
-always-show-logo no
 
-# REAL-TIME PERSISTENCE - Disable RDB snapshots for immediate saves
-# Comment out all save directives to disable periodic snapshots
-# save 900 1
-# save 300 10
-# save 60 10000
+# RDB Persistence - Enable periodic saves
+save 900 1
+save 300 10
+save 60 10000
+stop-writes-on-bgsave-error yes
+rdbcompression yes
+rdbchecksum yes
+dbfilename dump.rdb
 
-# For chat apps, we rely on AOF for real-time persistence
-
-# AOF (Append Only File) - REAL-TIME PERSISTENCE
+# AOF Persistence - Enable for real-time persistence
 appendonly yes
 appendfilename "appendonly.aof"
-
-# CRITICAL: Use 'everysec' not 'always' for good balance of performance and durability
-# This ensures messages are written to disk within 1 second maximum
 appendfsync everysec
-
-# AOF settings for real-time
 no-appendfsync-on-rewrite no
 auto-aof-rewrite-percentage 100
 auto-aof-rewrite-min-size 64mb
 aof-load-truncated yes
 aof-use-rdb-preamble yes
 
-# RDB settings (kept minimal since we rely on AOF)
-stop-writes-on-bgsave-error yes
-rdbcompression yes
-rdbchecksum yes
-dbfilename dump.rdb
+# Directory for data files
 dir /data
 
-# Memory management
+# Memory settings
 maxmemory 2gb
-maxmemory-policy allkeys-lru
-maxmemory-samples 5
+maxmemory-policy noeviction
 
-# Lazy freeing - Keep disabled for consistency
+# Disable some potentially problematic features
 lazyfree-lazy-eviction no
 lazyfree-lazy-expire no
 lazyfree-lazy-server-del no
-replica-lazy-flush no
 
-# Slow log
-slowlog-log-slower-than 10000
-slowlog-max-len 128
-
-# Client output buffer limits
-client-output-buffer-limit normal 0 0 0
-client-output-buffer-limit replica 256mb 64mb 60
-client-output-buffer-limit pubsub 32mb 8mb 60
-
-# Frequency - Higher for better responsiveness
-hz 20
-
-# AOF rewrite
-aof-rewrite-incremental-fsync yes
-
-# Active defragmentation - Disabled for consistency
-activedefrag no
-
-# PERFORMANCE TUNING FOR CHAT APPS
-# Disable some features that can cause delays
-rdb-save-incremental-fsync yes
-
-# Note: fsync is handled by appendfsync setting above
+# Performance
+hz 10
